<resources>
    <string name="app_name">KeDaiApp</string>
    <string name="beranda">Beranda</string>
    <string name="e_book">E-Book</string>
    <string name="layanan">Layanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="line">I</string>
    <string name="tanggal_event">Tanggal Event</string>
    <string name="todo">TODO</string>
    <string name="lokasi_event">Lokasi Event</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="acara">Acara</string>
    <string name="error">Gagal memuat</string>
    <string name="ste">STE</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="email">Email</string>
    <string name="kampus">Kampus</string>
    <string name="alasan_mendaftar">Alasan Mendaftar</string>
    <string name="daftar">Daftar</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="o">O</string>
    <string name="tidak_tahu">Tidak tahu</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="lanjut">Lanjut</string>
    <string name="pendaftaran_sukses">Pendaftaran Sukses</string>
    <string name="kedaiapp">KeDaiApp</string>
    <string name="versi_rilis">Versi Rilis</string>
    <string name="terakhir_diperbaharui">Terakhir Diperbaharui</string>
    <string name="keterrangan_app">KeDai Computerworks berawal dari salah satu komunitas IT di STMIK Dipanegara Makassar, organisasi ini mulai muncul pada tahun 1998 dan didirikan oleh sekelompok / (16 orang Pelopor) mahasiswa STMIK Dipanegara Makassar yang peduli bahwa wadah seperti inilah yang bisa dijadikan tempat meningkatkan kreatifitas dalam pengembangan Teknologi Informasi.</string>
    <string name="media_sosial">Media Sosial :</string>
    <string name="kedai_computerworks">KeDai Computerworks</string>
    <string name="ketawadamai">ketawadamai</string>
    <string name="kdcomputerworks">kdcomputerworks</string>
    <string name="about">About</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="jadwal_kegiatan">Jadwal Kegiatan</string>
    <string name="cek_pembayaran">Cek Pembayaran</string>
    <string name="download_no_registrasi">Download No. Registrasi</string>
    <string name="nomor_registrasi">Nomor Registrasi</string>
    <string name="april_2021">April 2021</string>
    <string name="loading">Loading…</string>
    <string name="open_recruitment">OPEN RECRUITMENT</string>
    <string name="let_s_join_with_us">Let\'s Join With Us</string>
    <string name="masukkan_data_diri">Masukkan Data Diri Anda</string>
    <string name="masukkan_kontak">Masukkan Kontak Anda</string>
    <string name="masukkan_asal_kampus_anda">Masukkan Asal Kampus Anda</string>
    <string name="pendaftaran_berhasil">Pendaftaran Berhasil</string>
    <string name="registrasi_ulang">Lakukan konfirmasi registrasi dengan memperlihatkan \n no.registrasi di stand KeDai Computerworks,\n Sekretariat KeDai Computerworks.</string>
    <string name="harap_simpan_screenshot_nomor_registrasi_anda">*Harap simpan / screenshot nomor registrasi anda</string>
    <string name="biaya_registrasi_sebesar_rp_85_000">Biaya registrasi sebesar Rp. 85.000</string>
    <string name="ok">OK</string>
    <string name="version">2.1</string>
    <string name="alur_pendaftaran">Lihat Cara Mendaftar</string>
    <string name="dan_cara_mendaftar">dan Cara Mendaftar</string>

</resources>