<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SteFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:paddingHorizontal="32dp">

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/daftar_sekarang"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCekPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_button"
            android:text="@string/cek_pembayaran"
            app:layout_constraintTop_toBottomOf="@+id/btnDaftar" />

        <Button
            android:id="@+id/btnJadwalKegiatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_button"
            android:text="@string/jadwal_kegiatan"
            app:layout_constraintTop_toBottomOf="@+id/btnCekPaid" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>