<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="50dp"
    tools:context=".activity.CheckPaidActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registrasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:hint="@string/nomor_registrasi"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNoRegistrasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button"
        android:text="@string/cek_pembayaran"
        app:layout_constraintTop_toBottomOf="@+id/registrasi" />

    <TextView
        android:id="@+id/tvRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btnCek"
        tools:text="registrasi" />

    <Button
        android:id="@+id/btnDownlaod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/download_no_registrasi"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvRegis" />

</androidx.constraintlayout.widget.ConstraintLayout>