<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:paddingHorizontal="32dp"
    tools:context=".activity.SteRegistrationActivity3">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kampus"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:hint="@string/kampus"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/inputKampus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alasan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alasan_mendaftar"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/kampus">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAlasan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnDaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/daftar"
        android:textColor="@color/white"
        app:initialCornerAngle="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alasan"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />
</androidx.constraintlayout.widget.ConstraintLayout>